lightdm (1.17.0-0ubuntu1) UNRELEASED; urgency=medium

  * New upstream release:
    - ...
  * Build with multi-arch
  * debian/patches/xorg-1.17.patch:
    - Fix xserver-allow-tcp=true option not working with X.org 1.17
  * data/apparmor/abstractions/lightdm_chromium-browser: cgroups support for
    guest sessions. (LP: #1504049, LP: #1464958)

 -- Robert Ancell <robert.ancell@canonical.com>  Mon, 12 Oct 2015 14:57:47 +0100

lightdm (1.16.0-0ubuntu1) wily; urgency=medium

  * New upstream release:
    - Update default configuration better explaining the seat configuration name
      matching and dropping references to the obsolete [SeatDefaults] section

 -- Robert Ancell <robert.ancell@canonical.com>  Mon, 07 Sep 2015 10:52:54 +1200

lightdm (1.15.3-0ubuntu3) wily; urgency=medium

  * debian/lightdm.postrm:
    - Don't remove the lightdm user/group on package removal. This fails if the
      user is still in use and leaves the risk of another user being created
      with the same UID. (LP: #924224)

 -- Robert Ancell <robert.ancell@canonical.com>  Wed, 26 Aug 2015 09:35:56 +0100

lightdm (1.15.3-0ubuntu2) wily; urgency=medium

  * debian/lightdm.lightdm-greeter.pam:
  * debian/lightdm.pam:
    - Load pam_kwallet5 in pam profile (kwallet and kwallet5 are distinct
      entities requiring sepreate unlocking)

 -- Harald Sitter <sitter@kde.org>  Mon, 24 Aug 2015 12:50:00 +0200

lightdm (1.15.3-0ubuntu1) wily; urgency=medium

  * New upstream release:
    - Drop Xorg option -sharevts. It's no longer required for non-seat0 X
      servers since xorg-server release 1.16.
  * debian/patches/autologin-session-workaround.patch:
    - Workaround faulty setting from user-setup package (LP: #1484083)

 -- Robert Ancell <robert.ancell@canonical.com>  Mon, 17 Aug 2015 10:39:27 +1200

lightdm (1.15.2-0ubuntu2) wily; urgency=medium

  * debian/control:
    - Add build-depends on valac

 -- Robert Ancell <robert.ancell@canonical.com>  Mon, 10 Aug 2015 16:38:04 +1200
