@@ -1,12 +1,16 @@
 lightdm (1.17.0-0ubuntu1) UNRELEASED; urgency=medium
 
   * New upstream release:
-    - ...
+    - Don't backup system log files to *.old when starting. Handling of these
+      log files is now left to the system (e.g., through logrotate).
   * Build with multi-arch
   * debian/patches/xorg-1.17.patch:
     - Fix xserver-allow-tcp=true option not working with X.org 1.17
   * data/apparmor/abstractions/lightdm_chromium-browser: cgroups support for
     guest sessions. (LP: #1504049, LP: #1464958)
+  * debian/lightdm.logrotate:
+    - Use logrotate to handle log files placed in the default system log
+      directory (/var/log/lightdm).
 
  -- Robert Ancell <robert.ancell@canonical.com>  Mon, 12 Oct 2015 14:57:47 +0100
 
